--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "camelcase": "off",
     "@typescript-eslint/no-empty-interface": "off",
+    "global-require": "off",
     "import/prefer-default-export": "off",
     "react/style-prop-object": "off",
     "react-hooks/rules-of-hooks": "error",
