--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,8 +24,13 @@
     "prettier/prettier": "error",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "camelcase": "off",
+    "react/jsx-pascal-case": "off",
+    "react/require-default-props": "off",
+    "no-console": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-empty-interface": "off",
     "global-require": "off",
+    "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off",
     "react/style-prop-object": "off",
     "react-hooks/rules-of-hooks": "error",
