--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "camelcase": "off",
     "react/jsx-pascal-case": "off",
     "react/require-default-props": "off",
+    "import/no-extraneous-dependencies": "off",
     "no-console": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-empty-interface": "off",
