--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@unform/core": "^2.1.6",
@@ -20,6 +19,7 @@
     "expo": "~40.0.0",
     "expo-constants": "~9.3.3",
     "expo-font": "~8.4.0",
+    "expo-linear-gradient": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
