--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-modal": "^11.7.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
